fix error in ATF example

--- a/docs/source/examples/Numerically Calculated Aberration Transfer Function.ipynb
+++ b/docs/source/examples/Numerically Calculated Aberration Transfer Function.ipynb
@@ -220,7 +220,7 @@
     "    idxs = list(range(max_zernike+1))\n",
     "    for i in idxs:\n",
     "        kwarg = {}\n",
-    "        kwarg[f'Z{i}'] = rms_wfe\n",
+    "        kwarg[f'Z{i+1}'] = rms_wfe\n",
     "        pupil = FringeZernike(**kwarg, norm=True, z_unit='waves')  # waves is the default, not really needed\n",
     "        psf = PSF.from_pupil(pupil, efl=2)  # normalized frequency makes this choice arbitrary\n",
     "        mtf = MTF.from_psf(psf)\n",
@@ -292,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
