+mention prop in doc

--- a/docs/source/releases/v0.19.rst
+++ b/docs/source/releases/v0.19.rst
@@ -14,7 +14,7 @@ API Fluency
 
 Propagation
 ~~~~~~~~~~~
-In this release, prysm has gained increased capability for performing propagations outside of the pupil-to-image case.  The API has also been revised for reduced verbosity and better clarity.  The old API is provided with deprecations to ease transition.
+In this release, prysm has gained increased capability for performing propagations outside of the pupil-to-image case.  The API has also been revised for reduced verbosity and better clarity.  The old API is provided with deprecations to ease transition.  A demo showing more than two order of magnitude performance improvement is available :doc:`Polychromatic Propagation in v0.19`.
 
 - :func:`~prysm.propagation.angular_spectrum` for plane-to-plane (i.e free space) propagation via the angular spectrum method
 - :func:`~prysm.propagation.angular_spectrum_transfer_function`, the transfer function of free space
