+ several chunks of new docs system

--- a/docs/source/explanation/how-prysm-works.ipynb
+++ b/docs/source/explanation/how-prysm-works.ipynb
@@ -4,13 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How prysm works\n",
+    "# How prysm Works\n",
     "\n",
     "This notebook will walk through how prysm works, so that users can develop intuition for the library.\n",
     "\n",
     "## Imports\n",
     "\n",
-    "prysm is structured into many sub-modules; common practice is to import that needed pieces and not use star imports.  For example, if you want to evaluate polynomials on a grid you already have handy, you would just import the relevant function(s).  Here `make_xy_grid` and `cart_to_polar` are imported to create the grid, but they operate on and return ordinary arrays and are not special."
+    "prysm is structured into many sub-modules; common practice is to import that needed pieces and _not_ use star imports.  See the bottom of the next section for an example.\n",
+    "\n",
+    "## Grids\n",
+    "\n",
+    "All functions in prysm operate on arrays, taking the relevant coordinates as arguments, e.g. $x$ and $y$ or $\\rho$ and \\$theta$.  No functions take anything like `sample_count` or `npix` as arguments.  This is to keep the library simple, and prevent any disagreement on assumptions about whether an array is inter-sample centered (not containing a zero element for even-size arrays) or fft-centered (containing a zero element always).  It is not meaningfully different to pass `npix` everywhere or pass `x, y`.\n",
+    "\n",
+    "For example, if you want to evaluate polynomials on a grid you already have handy, you would just import the relevant function(s).  Here `make_xy_grid` and `cart_to_polar` are imported to create the grid, but they operate on and return ordinary arrays and are not special."
    ]
   },
   {
@@ -68,13 +74,6 @@
     "\n",
     "Some types in prysm have constructors which take args of x, y while others take dx.  prysm assumes rectilinear sampling, and `dy == dx` is implicitly assumed.  Essentially, optical propagation does not require knowledge of all of the coordinates so prysm does not track it.  However, some other calculations (like masking interferograms) _does_ require full knowledge of the grid, so these types track x and y."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
