--- a/docs/source/How-tos/Notable-Telescope-Apertures.ipynb
+++ b/docs/source/How-tos/Notable-Telescope-Apertures.ipynb
@@ -9,10 +9,13 @@
     "\n",
     "This notebook will show how to use prysm to paint the apertures of notable telescopes.  Further modeling of these observatories will not be given here, and requries additional data (e.g., OPD maps or coefficients, masks) not widely available.  It is assumed the user sufficiently understands the components used to not require explanation of details.  All parameters are based on publically shown values and may be imprecise.  If you are a member of the science or engineering team for these systems, you should check all parameters against internal values.  \n",
     "\n",
+    "Most apertures include the steps to repeat this synthesis for any similar aperture, and do not jump directly to the solution.  They all conclude with a mask and a figure showing the fully composited aperture.\n",
+    "\n",
     "Links jump to telescopes:\n",
     "\n",
     "- [HST](#HST)\n",
     "- [JWST](#JWST)\n",
+    "- [TMT](#TMT)\n",
     "- [LUVOIR-A](#LUVOIR-A)\n",
     "- [LUVOIR-B](#LUVOIR-B)\n",
     "- [HabEx-A](#HabEx-A)\n",
@@ -22,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "neither-sally",
+   "id": "billion-ethnic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "binary-geology",
+   "id": "functional-suite",
    "metadata": {},
    "source": [
     "## HST\n",
@@ -48,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caring-essay",
+   "id": "returning-perth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informative-apache",
+   "id": "drawn-solomon",
    "metadata": {},
    "source": [
     "After shading the primary, we now compute the spider and pad obscurations:"
@@ -72,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "foreign-hollywood",
+   "id": "literary-freeware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fifteen-audience",
+   "id": "colonial-bacon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "verified-scenario",
+   "id": "entitled-tiffany",
    "metadata": {},
    "source": [
     "## JWST\n",
@@ -160,7 +163,159 @@
   },
   {
    "cell_type": "markdown",
-   "id": "applied-insured",
+   "id": "owned-scholar",
+   "metadata": {},
+   "source": [
+    "## TMT\n",
+    "\n",
+    "TMT is a hexagonally tiled aperture with 1.44 m segments (diameter, not flat-to-flat) and only 2.5 mm gaps.  The gaps cannot be drawn properly except on a very fine grid (30M/2.5mm ~= 12K array to get 1 sample per gap).  13 rings are required to shade the entire aperture.  The first step in defining the aperture is to indicate which segment has which ID from prysm (which are deterministic) and mark the ones missing from the observatory for exclusion:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "statewide-aquarium",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = make_xy_grid(1024, diameter=30)\n",
+    "r, t = cart_to_polar(x, y)\n",
+    "\n",
+    "flat_to_flat_to_vertex_vertex = 2 / np.sqrt(3)\n",
+    "vtov_to_flat_to_flat = 1 / flat_to_flat_to_vertex_vertex\n",
+    "\n",
+    "segdiam = vtov_to_flat_to_flat * 1.44\n",
+    "vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(13, segdiam, 2.5e-3, x, y, exclude=[])\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15,15))\n",
+    "ax.imshow(mask, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "for center, id_ in zip(centers, segment_ids):\n",
+    "    plt.text(*center, id_, ha='center', va='center')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "separated-combine",
+   "metadata": {},
+   "source": [
+    "The inner ring and center segment should be excluded, and only 6 segments exist per horizontal side, nor should the most extreme \"columns\" be present.  The topmost segments are also not present.  Let's start with this as an exclusion list:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "major-newport",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exclude = [\n",
+    "    0, 1, 2, 3, 4, 5, 6, # center\n",
+    "    469, 470, 508, 509, 507, 510, 506, 545, 471, 511, 505, 544, 472, 397, 433, # top, bottom\n",
+    "    534, 533, 532, 531, 521, 522, 523, 524, # left edge\n",
+    "    482, 483, 484, 485, 495, 494, 493, 492, # right edge\n",
+    "    #421, 420, 419, 409, 410, 411,\n",
+    "    #445, 446, 447, 457, 456, 455\n",
+    "]\n",
+    "\n",
+    "vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(13, segdiam, 2.5e-3, x, y, exclude=exclude)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15,15))\n",
+    "ax.imshow(mask, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "for center, id_ in zip(centers, segment_ids):\n",
+    "    plt.text(*center, id_, ha='center', va='center')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "traditional-validation",
+   "metadata": {},
+   "source": [
+    "Next we can see that the diagonal \"corners\" are too large.  With the exclusion list below, we can create a TMT pupil, excepting struts and SM obscuration, in only two lines of code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "noted-spell",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exclude = [\n",
+    "    0, 1, 2, 3, 4, 5, 6, # center\n",
+    "    469, 470, 508, 509, 507, 510, 506, 545, 471, 511, 505, 544, 472, 397, 433, # top, bottom\n",
+    "    534, 533, 532, 531, 521, 522, 523, 524, # left edge\n",
+    "    482, 483, 484, 485, 495, 494, 493, 492, # right edge\n",
+    "    457, 535, 445, 520, 481, 409, 421, 496, # corners\n",
+    "    536, 537, 479, 480, 497, 498, 519, 518, # next 'diagonal' from corners\n",
+    "]\n",
+    "\n",
+    "vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(13, segdiam, 2.5e-3, x, y, exclude=exclude)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15,15))\n",
+    "ax.imshow(mask, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "boxed-christian",
+   "metadata": {},
+   "source": [
+    "The TMT secondary obscuration is of 3.65 m diameter, we add it and struts of 50 cm diameter that are equiangular:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "occasional-farmer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spider_ = spider(3, .5, x, y, rotation=90)\n",
+    "sm_obs = ~circle(3.65/2, r)\n",
+    "plt.imshow(mask&spider_&sm_obs, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "champion-egyptian",
+   "metadata": {},
+   "source": [
+    "Last of all are the six cables, of 20 mm diameter.  These are a bit tricky, but they have a meeting point at 90% the radius of the SM obscuration.  We will form them similar to the JWST and LUVOIR-A spiders, by shifting the coordinate grid and specifying the angle.  The angles are about 10$^\\circ$ from the radial normal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bright-healing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first cable bundle\n",
+    "r_offset = 3.65/2*.8\n",
+    "center_angle = np.radians(90)\n",
+    "center_c1 = (np.cos(center_angle) * r_offset, np.sin(center_angle) * r_offset)\n",
+    "cable1 = spider(1, 0.02, x, y, rotation=25.5, center=center_c1)\n",
+    "cable2 = spider(1, 0.02, x, y, rotation=180-25.5, center=center_c1)\n",
+    "\n",
+    "center_angle = np.radians(-30)\n",
+    "center_c1 = (np.cos(center_angle) * r_offset, np.sin(center_angle) * r_offset)\n",
+    "cable3 = spider(1, 0.02, x, y, rotation=34.5, center=center_c1)\n",
+    "cable4 = spider(1, 0.02, x, y, rotation=-90-4.5, center=center_c1)\n",
+    "\n",
+    "center_angle = np.radians(210)\n",
+    "center_c1 = (np.cos(center_angle) * r_offset, np.sin(center_angle) * r_offset)\n",
+    "cable5 = spider(1, 0.02, x, y, rotation=180-34.5, center=center_c1)\n",
+    "cable6 = spider(1, 0.02, x, y, rotation=-90+4.5, center=center_c1)\n",
+    "\n",
+    "cables = cable1&cable2&cable3&cable4&cable5&cable6\n",
+    "fig, ax = plt.subplots(figsize=(15,15))\n",
+    "ax.imshow(mask&spider_&sm_obs&cables, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
+    "ax.set_title('Fully composited TMT aperture')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abandoned-sport",
    "metadata": {},
    "source": [
     "## LUVOIR-A\n",
@@ -171,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unknown-effort",
+   "id": "injured-integration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frank-thanksgiving",
+   "id": "recent-success",
    "metadata": {},
    "source": [
     "Note that we have discarded all of the other information from the composition process, which will be identical to the previous invocation.  We now add the spider, pretty much the same as JWST:"
@@ -196,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lucky-attempt",
+   "id": "collect-directive",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tested-validation",
+   "id": "experimental-balance",
    "metadata": {},
    "source": [
     "## LUVOIR-B\n",
@@ -233,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "typical-petersburg",
+   "id": "delayed-space",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "robust-albania",
+   "id": "knowing-primary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coordinated-nightmare",
+   "id": "coral-disclosure",
    "metadata": {},
    "source": [
     "## HabEx-A\n",
@@ -281,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mobile-fifty",
+   "id": "instant-detroit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "injured-amendment",
+   "id": "charged-defeat",
    "metadata": {},
    "source": [
     "## HabEx-B\n",
@@ -306,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "distant-positive",
+   "id": "wrong-nepal",
    "metadata": {},
    "outputs": [],
    "source": [
