fix bug in lens mtf tutorial

--- a/docs/source/tutorials/Lens-MTF-Model.ipynb
+++ b/docs/source/tutorials/Lens-MTF-Model.ipynb
@@ -21,9 +21,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "from prysm.coordinates import make_xy_grid, cart_to_polar\n",
     "from prysm.geometry import regular_polygon\n",
     "\n",
@@ -109,7 +106,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fx, _ = mtf.slices().x\n",
     "fig, ax = mtf.slices().plot(['x', 'y', 'azavg'], xlim=(0,200))\n",
+    "difflim = diffraction_limited_mtf(fno, wvl, fx)\n",
     "\n",
     "ax.plot(fx, difflim, ls=':', c='k', alpha=0.75, zorder=1)\n",
     "ax.set(xlabel='Spatial frequency, cy/mm', ylabel='MTF')"
@@ -183,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
